--- a/login.html
+++ b/login.html
@@ -1,6 +1,15 @@
 <html>
 <head>
-<script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js">
+    var ui = new firebaseui.auth.AuthUI(firebase.auth());
+    ui.start('#firebaseui-auth-container', {
+        signInOptions: [
+            // List of OAuth providers supported.
+            firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+        ],
+        // Other config options...
+    });
+</script>
 <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
 <script type="module">
   // Import the functions you need from the SDKs you need
@@ -23,9 +32,8 @@
   const app = initializeApp(firebaseConfig);
 </script>
 <script>
-var firebase = window.firebase;
-var firebaseui = window.firebase-ui;
-var ui = new firebaseui.auth.AuthUI(firebase.auth());
+//var firebase = window.firebase;
+//var firebaseui = window.firebase-ui;
 </script>
 </head>
 <!-- The surrounding HTML is left untouched by FirebaseUI.
