--- a/demo/public/index.html
+++ b/demo/public/index.html
@@ -9,8 +9,8 @@
     <script src="config.js"></script>
     <script src="common.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
-    <script src="dist/firebaseui.js"></script>
-    <link type="text/css" rel="stylesheet" href="dist/firebaseui.css" />
+    <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
