--- a/oauthutil/assets/widget.html
+++ b/oauthutil/assets/widget.html
@@ -7,8 +7,8 @@
     <script src="https://www.gstatic.com/firebasejs/9.13.0/firebase-auth-compat.js"></script>
     <script src="config.js"></script>
     <script src="common.js"></script>
-    <script src="dist/firebaseui.js"></script>
-    <link type="text/css" rel="stylesheet" href="dist/firebaseui.css" />
+    <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
     <style>
       body {
         margin: 0;
