* We can obtain a firebase user resource and then pass that back to the go server * This contains a refresh and access token
Now we need to figure out how to

1. Exchange refressh token for access token
2. Obtain ID token
3. Wrap that in an IDTokenSource

--- a/oauthutil/assets/login.html
+++ b/oauthutil/assets/login.html
@@ -1,3 +1,8 @@
+<!-- TODO(jeremy)
+This page can probably be cleaned up more. Since it is based on the UI demo
+app it shows a lot of options which you probably don't need.
+For example you have a button to click sign in with signup flow which allows you to sign up inside a popup window.
+-->
 <!DOCTYPE html>
 <html>
   <head>
